# Rosetta

./: .gitignore  CLAUDE.md  README.md  main.py  pass4_partial.jsonl  pyproject.toml
armv7_test_2/armv7/data/languages/: armv7.cspec  armv7.ldefs  armv7.pspec  armv7.slaspec
docs/: data-flow.md  testing-guide.md
manifests/: arm.yaml
scripts/: PrintDisasm.java  augment_with_reference.py  fix_armv6_spec.py  print_disasm.py  setup_ghidra.sh
src/rosetta/: cli.py  config.py  graph.py  stage_runner.py
src/rosetta/evaluation/: batch_eval.py  graph.py  similarity.py  spec_loader.py
src/rosetta/extraction/: isa_extractor.py  mnemonic_discovery.py  schemas.py
src/rosetta/generation/: module_generator.py  slaspec_builder.py
src/rosetta/utils/: llm.py  memory_guard.py
src/rosetta/validation/: headless_runner.py  sleigh_compiler.py
templates/: constructor_block.j2  processor.cspec.j2  processor.ldefs.j2  processor.pspec.j2  processor.slaspec.cisc.j2  processor.slaspec.j2
tests/: conftest.py  test_batch_eval.py  test_mnemonic_discovery.py  test_module_generator.py  test_schemas.py  test_similarity.py  test_sleigh_compiler.py  test_spec_loader.py  test_stage_runner.py
tests/data/: test_arm.elf
