[project]
name = "rosetta"
version = "0.1.0"
description = "ISA manual → Ghidra processor module generator"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "rosetta-schemas",
    "rosetta-utils",
    "rosetta-ingest",
    "rosetta-meta",
    "rosetta-classify",
    "rosetta-registers",
    "rosetta-mnemonics",
    "rosetta-opcode-map",
    "rosetta-instructions",
    "rosetta-pcode",
    "rosetta-generate-sla",
    "rosetta-validate-sla",
    "rosetta-evaluate-sla",
    "docquery @ git+https://github.com/gsbhub/docquery",
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "pytest>=9.0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.scripts]
rosetta = "rosetta.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rosetta"]

[tool.uv.workspace]
members = ["packages/*", "."]

[tool.uv.sources]
rosetta-schemas      = { workspace = true }
rosetta-utils        = { workspace = true }
rosetta-ingest       = { workspace = true }
rosetta-meta         = { workspace = true }
rosetta-classify     = { workspace = true }
rosetta-registers    = { workspace = true }
rosetta-mnemonics    = { workspace = true }
rosetta-opcode-map   = { workspace = true }
rosetta-instructions = { workspace = true }
rosetta-pcode        = { workspace = true }
rosetta-generate-sla = { workspace = true }
rosetta-validate-sla = { workspace = true }
rosetta-evaluate-sla = { workspace = true }
